@@ -57,7 +57,7 @@ $lang['colhdr_url'] = 'URL';
 $lang['coltitle_url'] = 'The unique URL (relative to the root URL) that can be used to browse to the page';
 $lang['colhdr_view'] = 'View';
 $lang['coltitle_view'] = 'The icon in this column allows viewing the page in a new browser tab.';
-$lang['confirm_clearlocks'] = 'Clearing locks could interrupt a working edit session.  Are you sure you want to continue?';
+$lang['confirm_clearlocks'] = 'Clearing lock\'s could interrupt a working edit session.  Are you sure you want to continue?';
 $lang['confirm_delete_page'] = 'Are you sure you want to delete this content item?';
 $lang['confirm_expandall'] = 'Are you sure you want to expand all content?  On large sites this may cause problems.  Please use caution';
 $lang['confirm_reorder'] = 'Are you sure you want to save the content in this order';
