@@ -31,6 +31,9 @@ try {
 	$css_nav['curpage'] = (int)($css_query->offset / $css_query->limit) + 1;
 	$smarty->assign('css_nav',$css_nav);
     $smarty->assign('manage_designs',$this->CheckPermission('Manage Designs'));
+    $locks = \CmsLockOperations::get_locks('stylesheet');
+    $smarty->assign('have_css_locks',count($locks));
+    $smarty->assign('lock_timeout', $this->GetPreference('lock_timeout'));
 
     echo $this->ProcessTemplate('ajax_get_stylesheets.tpl');
 }
