@@ -21,6 +21,7 @@ $lang['confirm_bulk_css_2'] = 'Yes, I am <strong>really</strong> sure I want to 
 $lang['confirm_bulk_template_1'] = 'Yes, I am sure I want to perform this operation on multiple templates.';
 $lang['confirm_bulk_template_2'] = 'Yes, I am <strong>really</strong> sure I want to act on multiple templates.';
 $lang['confirm_bulk_tmplop'] = 'Are you sure you want to perform this action on multiple templates?';
+$lang['confirm_clearlocks'] = 'Clearing locks could disrupt existing editing sessions.  Are you sure you want to continue?';
 $lang['confirm_delete_1'] = 'Are you sure you want to delete this design?';
 $lang['confirm_delete_2a'] = 'Yes, I am sure I want to delete this item';
 $lang['confirm_delete_2b'] = 'Yes, I am <strong>really</strong> sure I want to delete this item';
@@ -313,6 +314,7 @@ $lang['msg_category_deleted'] = 'Category Deleted';
 $lang['msg_category_saved'] = 'Category Saved';
 $lang['msg_design_imported']  = 'Design Imported';
 $lang['msg_dflt_design_saved'] = 'Default design changed';
+$lang['msg_lockscleared'] = 'Locks cleared';
 $lang['msg_lostlock'] = 'Sorry, but you have lost the lock on this item, and somebody else has made edits to this item.  You can save your changes to a text file for future use, but you can no longer commit any changes';
 $lang['msg_options_saved'] = 'Options Saved';
 $lang['msg_steal_lock'] = 'You can steal this lock';
@@ -349,6 +351,7 @@ $lang['prompt_attached_designs'] = 'This stylesheet is attached to these designs
 $lang['prompt_category'] = 'Category';
 $lang['prompt_categories'] = 'Categories';
 $lang['prompt_cmsversion'] = 'CMS Version';
+$lang['prompt_clearlocks'] = 'Remove Locks';
 $lang['prompt_copy'] = 'Copy';
 $lang['prompt_copyrightlicense'] = 'Copyright and License';
 $lang['prompt_copy_template'] = 'Copy this Template';
@@ -440,6 +443,7 @@ $lang['submitandedit'] = 'Submit And Edit';
 #T
 $lang['title_cat_id'] = 'This column displays the unique integer id for the category.';
 $lang['title_cat_name'] = 'This column displays the unique name for the category.';
+$lang['title_clearlocks'] = 'Clear any locked items (subject to permissions)';
 $lang['title_css_designs'] = 'This column lists the design that a stylesheet is attached to. If any.';
 $lang['title_css_id'] = 'This column displays the unique integer id for the stylesheet.';
 $lang['title_css_modified'] = 'Displays the date the stylesheet was last modified.';
